--- a/app/views/promotions/events.html.erb
+++ b/app/views/promotions/events.html.erb
@@ -1,11 +1,4 @@
-<%= link_to 'Synchroniser avec Google', promotion_events_sync_path(promotion_id: @promotion.id), method: :post, class: 'btn btn-default btn-lg' %>
-
-<ul>
-  <li><a href="#raw"><%= @promotion.calendar_events.count %> événements Google Calendar bruts</a></li>
-  <li><a href="#imported"><%= @promotion.calendar_events.count %> événements Google Calendar bruts</a></li>
-</ul>
-
-<h2 id="raw"><%= @promotion.calendar_events.count %> événements Google Calendar bruts</h2>
+<h2><%= @promotion.calendar_events.count %> événements Google Calendar bruts</h2>
 <table class="table">
   <thead>
     <tr>
@@ -26,37 +19,5 @@
         <td><%= (event.dtend - event.dtstart) / 60 / 60 %></td>
       </tr>
     <% end unless @promotion.calendar_events.nil? %>
-  </tbody>
-</table>
-
-<h2 id="imported"><%= @promotion.events.count %> événements Google Calendar importés</h2>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Module</th>
-      <th>Date</th>
-      <th>Type</th>
-      <th>Heures</th>
-      <th>Heures étudiants</th>
-      <th>Heures enseignant</th>
-      <th>Personnes</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @promotion.events.each do |event| %>
-      <tr>
-        <td><%= event.teaching_module %></td>
-        <td><%= event.date.strftime "%d/%m/%Y" %></td>
-        <td><%= event.kind.to_s.upcase %></td>
-        <td><%= number_to_human event.duration %></td>
-        <td><%= number_to_human event.student_hours %></td>
-        <td><%= number_to_human event.teacher_hours %></td>
-        <td>
-          <% event.users.each do |user| %>
-            <%= link_to user, user %><br>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
   </tbody>
 </table>
