--- a/app/views/promotions/events_imported.html.erb
+++ b/app/views/promotions/events_imported.html.erb
@@ -5,25 +5,36 @@
       <th>Module</th>
       <th>Date</th>
       <th>Type</th>
+      <th>Label</th>
+      <th>Description</th>
       <th>Heures</th>
       <th>Heures étudiants</th>
       <th>Heures enseignant</th>
       <th>Personnes</th>
+      <th>Ouvrir</th>
     </tr>
   </thead>
   <tbody>
-    <% @promotion.events.each do |event| %>
+    <% @promotion.events.ordered.each do |event| %>
       <tr>
-        <td><%= event.teaching_module %></td>
-        <td><%= event.date.strftime "%d/%m/%Y" %></td>
+        <td class="<%= 'bg-danger' if event.teaching_module.nil? %>"><%= event.teaching_module %></td>
+        <td><%= event.date.strftime "%d/%m/%Y, %H:%M" %></td>
         <td><%= event.kind.to_s.upcase %></td>
+        <td><%= event.label %></td>
+        <td><%= event.description %></td>
         <td><%= number_to_human event.duration %></td>
         <td><%= number_to_human event.student_hours %></td>
         <td><%= number_to_human event.teacher_hours %></td>
-        <td>
+        <td class="<%= 'bg-danger' if event.users.empty? %>">
           <% event.users.each do |user| %>
             <%= user %><br>
           <% end %>
+        </td>
+        <td>
+          <%= link_to 'Ouvrir la semaine', 
+                      "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}", 
+                      target: :blank,
+                      class: 'btn btn-default btn-xs' %>
         </td>
       </tr>
     <% end %>
