--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -65,9 +65,9 @@
                 <td><%= teaching_module.code_apogee %></td>
                 <td><%= teaching_module.label %></td>
                 <td><%= year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user).round %></td>
-                <td><%= year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm) %></td>
-                <td><%= year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td) %></td>
-                <td><%= year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp) %></td>
+                <td><%= year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm).round %></td>
+                <td><%= year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td).round %></td>
+                <td><%= year.scheduled_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp).round %></td>
               </tr>
             <% end %>
           </tbody>
