--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -11,6 +11,12 @@
   font-weight: 300
   text-rendering: optimizeLegibility
 
+body
+  background-size: cover
+  background-attachment: fixed
+  background-image: asset-url('background.png')
+  background-position: center
+
 ul 
   list-style-type: none
   list-style-position: inside
@@ -90,17 +96,20 @@ hr.spacer
     font-size: 10px
     padding: 4px
 
+main
+  background: white
+  padding-top: 30px
+  padding-bottom: 60px
+
 .jumbotron
   color: white
   margin-top: -100px
+  margin-bottom: 0
   text-align: center
   padding: 150px 50px 130px
-  background-size: cover
-  background-attachment: fixed
-  background-image: asset-url('headers/default.jpg')
-  background-position: center
   position: relative
   z-index: 0
+  background: transparent
   &:before
     content: ''
     position: absolute
@@ -109,16 +118,8 @@ hr.spacer
     right: 0
     bottom: 0
     left: 0
-    background-image: linear-gradient(to bottom, black, transparent)
-    opacity: .5
-  &.projects
-    background-image: asset-url('headers/projects.jpg')
-  &.teaching_modules
-    background-image: asset-url('headers/teaching_modules.jpg')
-  &.users
-    background-image: asset-url('headers/users.jpg')
-  &.budgets
-    background-image: asset-url('headers/budgets.jpg')
+    background: black
+    opacity: .3
 
 .panel-heading 
   h3
@@ -130,7 +131,7 @@ hr.spacer
 body.devise
   background-size: cover
   background-attachment: fixed
-  background-image: asset-url('headers/default.jpg')
+  background-image: asset-url('background.png')
   background-position: center
   .logo
     margin: 50px auto
@@ -140,18 +141,22 @@ body.devise
       border-color: black
 
 footer
-  opacity: 0.9
+  height: 100vh
   font-size: 10px
   text-align: center
-  margin: 60px 0 0
-  padding: 50px 0
-  background-color: #fff
-  .logo
-    margin: 10px auto !important
+  .inner
+    background: white
+    padding: 60px
+    display: inline-block
+    margin-top: 30vh
+    .logo
+      margin: 10px auto !important
 
 body.discuss
   .logo
     margin: 30px auto
+  .btn.teachers
+    float: right
   h1
     text-align: center
     font-weight: 200
