--- a/app/views/discuss/index.html.erb
+++ b/app/views/discuss/index.html.erb
@@ -1,13 +1,8 @@
 <% content_for :jumbotron do %>
   <h1>Années scolaires</h1>
 <% end %>
-<div class="row">
-  <div class="col-md-6">Cliquez sur une année scolaire ci-dessous pour accéder aux contenus pédagogiques</div>
-  <div class="col-md-6 text-right">
-    Vous faites partie de l'équipe enseignante ?<br> 
-    <%= link_to 'Cliquez ici pour vous connecter au tableau de bord pédagogique', dashboard_path, class: 'btn btn-primary' %>
-  </div>
-</div>
+
+Cliquez sur une année scolaire ci-dessous pour accéder aux contenus pédagogiques
 <ul>
   <% @years.each do |year| %>
     <li><h2><%= link_to year, discuss_year_path(year.year) %></h2></li>
