--- a/app/views/layouts/discuss.html.erb
+++ b/app/views/layouts/discuss.html.erb
@@ -12,6 +12,7 @@
   </head>
   <body class="discuss">
     <div class="jumbotron">
+      <%= link_to 'Espace enseignants', dashboard_path, class: 'btn btn-default btn-sm teachers' %>
       <div class="logo">
         <%= link_to root_path do %>
           <%= image_tag 'mmi-bordeaux.png' %>
@@ -20,32 +21,35 @@
       </div>
       <%= yield :jumbotron %>
     </div>
-    <div class="container">
-      <%= yield %>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div id="disqus_thread"></div>
-          <script>
-          /**
-          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-          /*
-          var disqus_config = function () {
-          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-          };
-          */
-          (function() { // DON'T EDIT BELOW THIS LINE
-          var d = document, s = d.createElement('script');
-          s.src = 'https://mmi-bordeaux-teach.disqus.com/embed.js';
-          s.setAttribute('data-timestamp', +new Date());
-          (d.head || d.body).appendChild(s);
-          })();
-          </script>
-          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <main>
+      <div class="container">
+        <%= yield %>
+        <div class="row">
+          <div class="col-md-8 col-md-offset-2">
+            <div id="disqus_thread"></div>
+            <script>
+            /**
+            *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://mmi-bordeaux-teach.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
+    <%= render 'application/footer' %>
     <script id="dsq-count-scr" src="//mmi-bordeaux-teach.disqus.com/count.js" async></script>
   </body>
 </html>
