--- a/app/views/application/_nav.html.erb
+++ b/app/views/application/_nav.html.erb
@@ -1,14 +1,14 @@
 <div class="navbar navbar-default navbar-static-top">
   <div class="container">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <%= link_to dashboard_path, class:'navbar-brand logo' do %>
-      <%= image_tag 'mmi-bordeaux.png' %>
-      <p>Teach</p>
-    <% end %>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <%= fa_icon :bars %>
+      </button>
+      <%= link_to dashboard_path, class:'navbar-brand logo' do %>
+        <%= image_tag 'mmi-bordeaux.png' %>
+        <p>Teach</p>
+      <% end %>
+    </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Tableau de bord', dashboard_path %></li>
