--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -8,4 +8,4 @@
 <%= link_to 'Modules', promotion_teaching_modules_path(promotion_id: @promotion.id), class: 'btn btn-default btn-lg' %>
 <%= link_to 'EDT: événements bruts', promotion_events_path(promotion_id: @promotion.id), class: 'btn btn-default btn-lg' %>
 <%= link_to 'EDT: événements importés', promotion_events_imported_path(promotion_id: @promotion.id), class: 'btn btn-default btn-lg' %>
-<%= link_to 'EDT: Synchroniser avec Google Calendar', promotion_events_sync_path(promotion_id: @promotion.id), method: :post, class: 'btn btn-default btn-lg' %>
+<%= link_to 'EDT: Synchroniser avec Google Calendar', promotion_events_sync_path(promotion_id: @promotion.id), method: :post, class: 'btn btn-default btn-lg' if can? :edit, @promotion %>
