--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Mon service <%= @year %></h2>
 <% if current_user.tenured %>
-  Je suis permanent dans l'équipe pédagogique, et mon service est de <%= current_user.hours %>h.
+  Je suis permanent dans l'équipe pédagogique<% if current_user.hours %>, et mon service est de <%= current_user.hours %>h<% end %>.
 <% else %>
   Je suis vacataire.
 <% end %>
@@ -19,7 +19,7 @@
     <div class="text-xl"><%= @year.planned_hours_for(current_user, :teacher_hours_tp).round %>hTP</div>
     <p><%= @year.planned_hours_for(current_user, :student_hours_tp).round %> heures TP avec chaque étudiant</p>
   </div>
-  <% if current_user.tenured %>
+  <% if current_user.tenured && current_user.hours%>
     <% delta = @year.planned_delta_for(current_user) %>
     <div class="col-md-2">
       <div class="btn btn-block <%= delta >= 0 ? 'btn-success' : ' btn-danger' %>">
