--- a/app/views/promotions/events.html.erb
+++ b/app/views/promotions/events.html.erb
@@ -16,7 +16,15 @@
         <td><%= event.description %></td>
         <td><%= raw event.attendee.map { |attendee| attendee.to_s.remove('mailto:') }.join '<br>' %></td>
         <td><%= event.dtstart.strftime "%d/%m/%Y" %></td>
-        <td><%= (event.dtend - event.dtstart) / 60 / 60 %></td>
+        <td>
+          <% 
+          begin
+            duration = event.dtend.to_time.to_i - event.dtstart.to_time.to_i
+          rescue
+            puts "Problem with event #{event}"
+          end
+          %>
+          <%= duration / 60 / 60 %></td>
       </tr>
     <% end unless @promotion.calendar_events.nil? %>
   </tbody>
