--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,10 +1,9 @@
-@import bootstrap-sprockets
-@import bootstrap
-@import font-awesome
-@import devise_bootstrap_views
-@import timeline/timeline
-@import glyphicons
-@import star-rating/star-rating.min
+@import 'bootstrap-sprockets'
+@import 'bootstrap'
+@import 'font-awesome'
+@import 'timeline/timeline'
+@import 'glyphicons'
+@import 'star-rating/star-rating.min'
 
 *
   font-family: sans-serif
