--- a/app/views/years/teaching_modules/show.html.erb
+++ b/app/views/years/teaching_modules/show.html.erb
@@ -31,37 +31,75 @@
         legend: { enabled: false },
         credits: { enabled: false },
         series: [
-          { 
-            name: 'TP', 
+          {
+            name: 'TP',
             data: [
-              <%= @teaching_module.hours_tp %>, 
+              <%= @teaching_module.hours_tp %>,
               <%= @year.planned_hours_for_teaching_module(@teaching_module, :hours_tp) %>,
               <%= @year.scheduled_hours_for_teaching_module(@teaching_module, :tp) %>
-            ] 
-          }, 
-          { 
-            name: 'TD', 
+            ]
+          },
+          {
+            name: 'TD',
             data: [
-              <%= @teaching_module.hours_td %>, 
+              <%= @teaching_module.hours_td %>,
               <%= @year.planned_hours_for_teaching_module(@teaching_module, :hours_td) %>,
               <%= @year.scheduled_hours_for_teaching_module(@teaching_module, :td) %>
-            ] 
-          }, 
-          { 
-            name: 'CM', 
+            ]
+          },
+          {
+            name: 'CM',
             data: [
-              <%= @teaching_module.hours_cm %>, 
+              <%= @teaching_module.hours_cm %>,
               <%= @year.planned_hours_for_teaching_module(@teaching_module, :hours_cm) %>,
               <%= @year.scheduled_hours_for_teaching_module(@teaching_module, :cm) %>
-              ] 
+              ]
             }
           ]
     });
 });
 </script>
 
-<h2>Maquette</h2>
 
+<h2>EDT</h2>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Type</th>
+      <th>Heures</th>
+      <th>Heures étudiants</th>
+      <th>Heures enseignant</th>
+      <th>Personnes</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @teaching_module.events_for_year(@year).each do |event| %>
+      <tr>
+        <td><%= event.date.strftime "%d/%m/%Y" %></td>
+        <td><%= event.kind.to_s.upcase %></td>
+        <td><%= number_to_human event.duration %></td>
+        <td><%= number_to_human event.student_hours %></td>
+        <td><%= number_to_human event.teacher_hours %></td>
+        <td>
+          <% event.users.each do |user| %>
+            <%= link_to user, user %><br>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to 'Ouvrir la semaine',
+                      "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
+                      target: :blank,
+                      class: 'btn btn-default btn-xs' %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+
+<h2>Maquette</h2>
 <%= link_to 'Planifier une intervention', new_year_involvement_path(year_id: @year.id, teaching_module_id: @teaching_module.id), class: 'btn btn-primary btn-xs' if can? :create, Involvement %>
 <table class="table">
   <thead>
@@ -93,37 +131,6 @@
       <td><%= link_to 'Modifier', edit_year_involvement_path(year_id: @year.id, id: involvement.id), class: 'btn btn-primary btn-xs' if can? :edit, involvement %></td>
     </tr>
   <% end %>
-  </tbody>
-</table>
-
-<h2>EDT</h2>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Type</th>
-      <th>Heures</th>
-      <th>Heures étudiants</th>
-      <th>Heures enseignant</th>
-      <th>Personnes</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @teaching_module.events.each do |event| %>
-      <tr>
-        <td><%= event.date.strftime "%d/%m/%Y" %></td>
-        <td><%= event.kind.to_s.upcase %></td>
-        <td><%= number_to_human event.duration %></td>
-        <td><%= number_to_human event.student_hours %></td>
-        <td><%= number_to_human event.teacher_hours %></td>
-        <td>
-          <% event.users.each do |user| %>
-            <%= link_to user, user %><br>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
   </tbody>
 </table>
 
