--- a/app/views/years/projects/show.html.erb
+++ b/app/views/years/projects/show.html.erb
@@ -1,12 +1,24 @@
-<%= link_to 'Modifier', edit_year_project_path(year_id: @year.id, id: @project.id), class: 'btn btn-default' if can? :edit, @project %>
+<%= link_to 'Modifier',
+            edit_year_project_path(year_id: @year.id, id: @project.id),
+            class: 'btn btn-default' if can? :edit, @project %>
+<%= link_to 'Synchroniser la maquette à partir de l\'EDT',
+            sync_involvements_from_events_year_project_path(year_id: @year.id, id: @project.id),
+            method: :post,
+            class: 'btn btn-default' if can? :edit, @project %>
+<br/><br/>
 <div class="row">
   <div class="col-md-3">
     <%= @project.sublabel %>
     <h4>Description détaillée</h4>
     <%= simple_format @project.detailed_description %>
     <h4>Année</h4>
-    <%= link_to @project.year, @project.year %>
-    (<%= @project.week_number %>)
+    <p>
+      <%= link_to @project.year, @project.year %>
+      (<%= @project.week_number %>)
+    </p>
+    <% if @project.from && @project.to %>
+      <p>Du <%= l @project.from %> au <%= l @project.to %></p>
+    <% end %>
     <h4>Semestres</h4>
     <%= render partial: 'semesters/inline_list', locals: {semesters: @project.semesters} %>
     <h4>Champs concernés</h4>
@@ -24,7 +36,8 @@
   </div>
   <div class="col-md-9">
     <%= render 'years/projects/evaluation', project: @project %>
-    <h4>Heures planifiées</h4>
+
+    <h4>Maquette (heures planifiées)</h4>
     <p>
       Heures étudiants : <%= @project.student_hours %>
       (CM <%= @project.student_hours_cm %>
@@ -54,7 +67,7 @@
         <tr>
           <td><%= link_to involvement.user, involvement.user unless involvement.user.nil? %></td>
           <td><%= link_to involvement.teaching_module&.full_name, involvement.teaching_module %></td>
-          <td><%= link_to involvement.promotion.year, involvement.promotion %></td>
+          <td><%= link_to involvement.promotion&.year, involvement.promotion %></td>
           <td><%= involvement.student_hours %></td>
           <td><%= involvement.hours_cm %></td>
           <td><%= involvement.hours_td %></td>
@@ -66,6 +79,52 @@
       <% end %>
       </tbody>
     </table>
+
+    
+    <h4>Emploi du temps</h4>
+    <p>
+      Attention, certains événements peuvent avoir lieu pendant le temps du projet sans être rattachés au projet.
+      Ce tableau peut donc présenter des faux positifs.
+    </p>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Module</th>
+          <th>Type</th>
+          <th>Heures</th>
+          <th>Heures étudiants</th>
+          <th>Heures enseignant</th>
+          <th>Personnes</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @project.events.ordered.each do |event| %>
+        <tr>
+          <td><%= event.date.strftime "%d/%m/%Y" %></td>
+          <td><%= event.teaching_module&.full_name %></td>
+          <td><%= event.kind.to_s.upcase %></td>
+          <td><%= number_to_human event.duration %></td>
+          <td><%= number_to_human event.student_hours %></td>
+          <td><%= number_to_human event.teacher_hours %></td>
+          <td>
+            <% event.users.each do |user| %>
+              <%= link_to user, user %><br>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to 'Ouvrir la semaine',
+                        "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
+                        target: :blank,
+                        class: 'btn btn-default btn-xs' %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+
 
     <h4>Objectifs visés par ce projet</h4>
     <table class="table table-striped">
