--- a/app/views/promotions/events_imported.html.erb
+++ b/app/views/promotions/events_imported.html.erb
@@ -3,6 +3,7 @@
   <thead>
     <tr>
       <th>Module</th>
+      <th>Projet</th>
       <th>Date</th>
       <th>Type</th>
       <th>Label</th>
@@ -18,6 +19,7 @@
     <% @promotion.events.ordered.each do |event| %>
       <tr>
         <td class="<%= 'bg-danger' if event.teaching_module.nil? %>"><%= event.teaching_module %></td>
+        <td><%= event.project %></td>
         <td><%= event.date.strftime "%d/%m/%Y, %H:%M" %></td>
         <td><%= event.kind.to_s.upcase %></td>
         <td><%= event.label %></td>
@@ -31,8 +33,8 @@
           <% end %>
         </td>
         <td>
-          <%= link_to 'Ouvrir la semaine', 
-                      "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}", 
+          <%= link_to 'Ouvrir la semaine',
+                      "https://calendar.google.com/calendar/b/1/r/week/#{event.date.year}/#{event.date.month}/#{event.date.day}",
                       target: :blank,
                       class: 'btn btn-default btn-xs' %>
         </td>
