--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -58,8 +58,9 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Module</th>
       <th>Date</th>
+      <th>Module</th>
+      <th>Projet</th>
       <th>Type</th>
       <th>Label</th>
       <th>Description</th>
@@ -73,8 +74,9 @@
   <tbody>
     <% @year.events_for(@user).ordered.each do |event| %>
       <tr>
-        <td class="<%= 'bg-danger' if event.teaching_module.nil? %>"><%= event.teaching_module %></td>
         <td><%= event.date.strftime "%d/%m/%Y, %H:%M" %></td>
+        <td class="<%= 'bg-danger' if event.teaching_module.nil? %>"><%= event.teaching_module %></td>
+        <td><%= event.project %></td>
         <td><%= event.kind.to_s.upcase %></td>
         <td><%= event.label %></td>
         <td><%= event.description %></td>
