--- a/app/views/years/semesters/index.html.erb
+++ b/app/views/years/semesters/index.html.erb
@@ -1,5 +1,7 @@
+<%= render 'years/nav' %>
+
 <% @semesters.each do |semester| %>
-  <% 
+  <%
   objectives = semester.objectives
   objectives_covered = objectives.where(id: @year.objectives)
   objectives_not_covered = objectives - objectives_covered
