--- a/app/views/years/projects/index.html.erb
+++ b/app/views/years/projects/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'years/nav' %>
+
 <%= link_to 'Nouveau projet', new_year_project_path(year_id: @year.id), class: 'btn btn-primary btn-xs' if can? :create, Project %>
 <div id='timeline' style="width: 100%; height: 600px"></div>
 <script type="text/javascript">
