--- a/app/views/years/teaching_modules/index.html.erb
+++ b/app/views/years/teaching_modules/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'years/nav' %>
+
 <p><%= @student_hours %> heures étudiants, <%= @teacher_hours %> heures enseignant</p>
 
 <% Semester.all.each do |semester| %>
@@ -6,7 +8,7 @@
   <h3>Heures</h3>
   <p>
     <%= semester.expected_student_hours.round %> PPN /
-    <%= @year.involvements.in_semester(semester).sum(:student_hours).round %> maquette / 
+    <%= @year.involvements.in_semester(semester).sum(:student_hours).round %> maquette /
     <%= @year.events.in_semester(semester).sum(:student_hours).round %> EDT
   </p>
   <p>En heures étudiant, sous la forme "Heures totales (heures CM / heures TD / heures TP)</p>
@@ -24,29 +26,29 @@
           legend: { enabled: false },
           credits: { enabled: false },
           series: [
-            { 
-              name: 'TP', 
+            {
+              name: 'TP',
               data: [
-                <%= semester.student_hours_tp %>, 
+                <%= semester.student_hours_tp %>,
                 <%= @year.involvements.in_semester(semester).sum(:student_hours_tp) %>,
                 <%= @year.events.tp.in_semester(semester).sum(:student_hours) %>
                 ]
-              }, 
-            { 
-              name: 'TD', 
+              },
+            {
+              name: 'TD',
               data: [
-                <%= semester.student_hours_td %>, 
+                <%= semester.student_hours_td %>,
                 <%= @year.involvements.in_semester(semester).sum(:student_hours_td) %>,
                 <%= @year.events.td.in_semester(semester).sum(:student_hours) %>
-                ] 
-              }, 
-            { 
-              name: 'CM', 
+                ]
+              },
+            {
+              name: 'CM',
               data: [
-                <%= semester.student_hours_cm %>, 
+                <%= semester.student_hours_cm %>,
                 <%= @year.involvements.in_semester(semester).sum(:student_hours_cm) %>,
                 <%= @year.events.cm.in_semester(semester).sum(:student_hours) %>
-              ] 
+              ]
             }
             ]
       });
@@ -67,7 +69,7 @@
     </thead>
     <tbody>
       <% semester.teaching_modules.each do |teaching_module| %>
-        <% 
+        <%
         program = teaching_module.expected_student_hours.round
         planned = @year.involvements.where(teaching_module: teaching_module).sum(:student_hours).round
         scheduled = @year.events.where(teaching_module: teaching_module).sum(:student_hours).round
