better teaching module

--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -58,7 +58,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Promotion<br/>&nbsp;</th>
+      <th>Promotion</th>
       <th>Date</th>
       <th>Module</th>
       <th>Projet</th>
