--- a/app/views/years/teaching_modules/show.html.erb
+++ b/app/views/years/teaching_modules/show.html.erb
@@ -102,26 +102,32 @@
   <thead>
     <tr>
       <th>Date</th>
-      <th>Type</th>
-      <th>Heures</th>
-      <th>Heures étudiants</th>
-      <th>Heures enseignant</th>
-      <th>Personnes</th>
-      <th></th>
+      <th>Projet</th>
+      <th>Label</th>
+      <th>Enseignants</th>
+      <th>Heures<br/><span class="small">étudiant/enseignant</span></th>
+      <th>Ouvrir</th>
     </tr>
   </thead>
   <tbody>
-    <% @teaching_module.events_for_year(@year).each do |event| %>
+    <% @teaching_module.events_for_year(@year).ordered.each do |event| %>
       <tr>
-        <td><%= event.date.strftime "%d/%m/%Y" %></td>
-        <td><%= event.kind.to_s.upcase %></td>
-        <td><%= number_to_human event.duration %></td>
-        <td><%= number_to_human event.student_hours %></td>
-        <td><%= number_to_human event.teacher_hours %></td>
+        <td><%= event.date.strftime "%d/%m/%Y, %H:%M" %></td>
+        <td><%= event.project %></td>
+        <td>
+          <%= event.label %>
+          <p class="small"><%= event.description %></p>
+        </td>
         <td>
           <% event.users.each do |user| %>
             <%= link_to user, user %><br>
           <% end %>
+        </td>
+        <td>
+          <%= number_to_human event.duration %>h <%= event.kind.to_s.upcase %><br/>
+          <p class="small">
+            <%= number_to_human event.student_hours %> / <%= number_to_human event.teacher_hours %>
+          </p>
         </td>
         <td>
           <%= link_to 'Ouvrir la semaine',
@@ -133,6 +139,5 @@
     <% end %>
   </tbody>
 </table>
-
 
 <%= link_to 'En savoir plus sur ce module', @teaching_module, class: 'btn btn-default' %>
