--- a/app/views/years/teaching_modules/show.html.erb
+++ b/app/views/years/teaching_modules/show.html.erb
@@ -66,31 +66,35 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Promotion</th>
+      <th>Projet</th>
       <th>Personne</th>
-      <th>Heures étudiant total</th>
+      <th>Heures étudiant</th>
       <th>CM</th>
       <th>TD</th>
       <th>TP</th>
       <th>Heures enseignant</th>
       <th>Note</th>
-      <th>Projet</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
   <% @year.involvements_for_teaching_module(@teaching_module).includes(:user).reorder('users.last_name').each do |involvement| %>
     <tr>
-      <td><%= link_to involvement.promotion, involvement.promotion %></td>
-      <td><%= link_to involvement.user, involvement.user unless involvement.user.nil? %></td>
-      <td><%= involvement.student_hours %></td>
-      <td><%= involvement.hours_cm %></td>
-      <td><%= involvement.hours_td %> <span class="label label-default">x <%= involvement.multiplier_td %></span></td>
-      <td><%= involvement.hours_tp %> <span class="label label-default">x <%= involvement.multiplier_tp %> / <%= involvement.groups_tp %></span></td>
-      <td><%= involvement.teacher_hours %></td>
-      <td style="max-width: 200px"><%= simple_format involvement.description %></td>
       <td><%= link_to involvement.project, [@year, involvement.project] unless involvement.project.nil? %></td>
-      <td><%= link_to 'Modifier', edit_year_involvement_path(year_id: @year.id, id: involvement.id), class: 'btn btn-primary btn-xs' if can? :edit, involvement %></td>
+      <td><%= link_to involvement.user, involvement.user unless involvement.user.nil? %></td>
+      <td><%= involvement.student_hours.round %></td>
+      <td><%= involvement.hours_cm.round %></td>
+      <td>
+        <%= involvement.hours_td.round %>
+        <span class="label label-default">x <%= involvement.multiplier_td %></span></td>
+      <td>
+        <%= involvement.hours_tp.round %>
+        <span class="label label-default">x <%= involvement.multiplier_tp %> / <%= involvement.groups_tp %></span></td>
+      <td><%= involvement.teacher_hours.round %></td>
+      <td style="max-width: 200px"><%= simple_format involvement.description %></td>
+      <td><%= link_to 'Modifier',
+                      edit_year_involvement_path(year_id: @year.id, id: involvement.id),
+                      class: 'btn btn-primary btn-xs' if can? :edit, involvement %></td>
     </tr>
   <% end %>
   </tbody>
